--- a/data-collection/arsenal.ipynb
+++ b/data-collection/arsenal.ipynb
@@ -10,28 +10,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "275b78e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to retrieve page. Status code: 403\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
+    "import random\n",
     "import pandas as pd\n",
     "import warnings\n",
     "# Hide FutureWarnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "# URL for Leeds \n",
-    "team_url = \"https://fbref.com/en/squads/5bfb9659/Leeds-United-Stats\"\n",
+    "team_url = \"https://fbref.com/en/squads/18bb7c10/2025-2026/all_comps/Arsenal-Stats-All-Competitions\"\n",
     "\n",
-    "# Sendeing HTTP GET-request to webpage\n",
-    "data = requests.get(team_url)\n",
+    "# Sending HTTP GET-request to webpage\n",
+    "# user agents\n",
+    "userAgents = [\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 15_7_2) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/26.0 Safari/605.1.15',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 15.7; rv:146.0) Gecko/20100101 Firefox/146.0',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 15_7_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/143.0.0.0 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 15_7_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/143.0.0.0 Safari/537.36 Vivaldi/7.7.3851.58',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 15_7_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/143.0.0.0 Safari/537.36 Edg/143.0.3650.80'\n",
+    "]\n",
+    "response = requests.get(team_url, headers={'User-Agent': random.choice(userAgents)})\n",
     "\n",
     "# check for success response (statuscode 200)\n",
     "if response.status_code == 200:\n",
     "    print(\"Successfully retrieved page\")\n",
     "else:\n",
     "    print(f\"Failed to retrieve page. Status code: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80404eff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "# Create a BeautifulSoup-objekt for navigating in HTML\n",
+    "soup = BeautifulSoup(data.text, \"html.parser\")\n",
+    "\n",
+    "# Print first 500 characters to get an overview\n",
+    "print(soup.prettify()[:500])"
    ]
   }
  ],
@@ -42,8 +74,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.7.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
